--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://andreasgunnahr.github.io/AF-project",
-  "name": "app",
+  "homepage": "http://andreasgunnahr.github.io/Af-app",
+  "name": "Af-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
